--- a/home.html
+++ b/home.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
+    <header>
+        <h1>DMIMG: Clasificador de documentos</h1>
+    </header>
+    
 <body>
-<h1>Hello World</h1>
+   
 </body>
 </html>
