--- a/home.html
+++ b/home.html
@@ -5,6 +5,18 @@
     </header>
     
 <body>
+   <div id="load">
+       <h2>Carga de datos</h2>
+   </div>   
    
+   <div id="process">
+        <h2>Proceso de clasificacion</h2>
+   </div>
+   
+   <div id="results">
+        <h2>Resultados</h2>
+
+   </div>
+
 </body>
 </html>
