--- a/home.html
+++ b/home.html
@@ -7,16 +7,24 @@
 <body>
    <div id="load">
        <h2>Carga de datos</h2>
+       <input id ="browseFile" type ="file">
+
    </div>   
    
    <div id="process">
         <h2>Proceso de clasificacion</h2>
-   </div>
+        <button type="button" onclick="ClassFun()">Iniciar proceso de clasificacion</button>
+        <p id= "procStatus"> En proceso.../Proceso Finalizado</p>
+    </div>
    
    <div id="results">
         <h2>Resultados</h2>
 
    </div>
+
+   <script>
+       var filePath = '';
+   </script>
 
 </body>
 </html>
