--- a/home.html
+++ b/home.html
@@ -13,14 +13,11 @@
 <body>
     <div class="flex-container">
         <div id="load">
-            <h3>Carga de datos</h3>
+            <h3 class="box-tittle">Carga de datos</h3>
             <input  type ="file" id ="browseFile" />
             <p id= "valval"></p>
             <p id= "cantChar"></p>
             <p id= "linea"></p>
-
-
-
         </div>   
         
         <div id="process">
