--- a/losmedanos.html
+++ b/losmedanos.html
@@ -11,10 +11,19 @@
     <p>Haz tu reserva ahora</p>
 </header>
 <body>
+    <p>Los medanos</p>
+    <p>Foto y Descripción </p>
+    <p>Costos </p>
+    <p>Reservas </p>
+
+
     
 </body>
 
 <footer>
+    <p>Legales - Sobre Nosotros Contacto </p>
+    <p>Desarrollado by Ibengel </p>
+
 
 </footer>
 </html>
