--- a/losmedanos.html
+++ b/losmedanos.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href="losmedanosstyle.css" >
     <title>Los Medanos</title>
 </head>
+
 <header>
-    <p>Los Medanos</p>
-    <p>Haz tu reserva ahora</p>
+    <div id= "hdr">Cafayate - Salta - Argentina</div>
 </header>
+
 <body>
-    <p>Los medanos</p>
-    <p>Foto y Descripción </p>
+    <div id= "titulo">Los Médanos</div>
+    
+    <div class="fotodescr">
+        <div class = "seccion" style="background-color: aqua;"> <p> Primera seccion</p></div>
+        <div class = "seccion" style="background-color: burlywood;"> <p> Segunda seccion</p></div>
+        <div class = "seccion" style="background-color: cornflowerblue;"> <p> Tercera seccion</p></div>
+        <div class = "seccion" style= "background-color: darkmagenta;"> <p> Cuarta seccion</p></div>
+
+    </div>
+
     <p>Costos </p>
     <p>Reservas </p>
 
@@ -21,7 +31,7 @@
 </body>
 
 <footer>
-    <p>Legales - Sobre Nosotros Contacto </p>
+    <p>Legales | Sobre Nosotros | Contacto </p>
     <p>Desarrollado by Ibengel </p>
 
 
