--- a/Manina.html
+++ b/Manina.html
@@ -23,8 +23,30 @@
 
     </div>
 
-    <p>Costos </p>
-    <p>Reservas </p>
+    <div class="Entradas">
+	<div class = "contprincipalA"> <p> Entradas</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
+    </div>
+
+
+    <div class="Principales">
+	<div class = "contprincipalC"> <p> Principales</p></div>
+	<div class = "contprincipalD"> <p> Descripciones</p></div>
+    </div>
+
+    <div class="Postres">
+	<div class = "contprincipalA"> <p> Postres</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
+    </div>
+
+    <div class="Bebidas">
+	<div class = "contprincipalC"> <p> Bebidas</p></div>
+	<div class = "contprincipalD"> <p> Descripciones</p></div>
+    </div>
+
+
+    <p>And it was enchanting to meet you. All I can say is, I was enchanted to meet you </p>
+    <p>All I can say is, I was enchanted to meet you</p>
 
 
     
