--- a/Manina.html
+++ b/Manina.html
@@ -16,10 +16,10 @@
     <div id= "titulo">Menu</div>
     
     <div class="fotodescr">
-        <div class = "seccion" style="background-color: #248f8f;"> <p> We found Wonderland</p></div>
-        <div class = "seccion" style="background-color: #29a3a3;"> <p> You and I got lost in it</p></div>
-        <div class = "seccion" style="background-color: #2eb8b8;"> <p> We found Wonderland</p></div>
+        <div class = "seccion" style="background-color: #47d1d1;"> <p> We found Wonderland</p></div>
         <div class = "seccion" style="background-color: #33cccc;"> <p> You and I got lost in it</p></div>
+        <div class = "seccion" style="background-color: #2eb8b8;"> <p> We found Wonderland</p></div>
+        <div class = "seccion" style="background-color: #248f8f;"> <p> You and I got lost in it</p></div>
 
     </div>
 
@@ -30,8 +30,8 @@
 
 
     <div class="Principales">
-	<div class = "contprincipalC"> <p> Principales</p></div>
-	<div class = "contprincipalD"> <p> Descripciones</p></div>
+	<div class = "contprincipalA"> <p> Principales</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
     </div>
 
     <div class="Postres">
@@ -40,8 +40,8 @@
     </div>
 
     <div class="Bebidas">
-	<div class = "contprincipalC"> <p> Bebidas</p></div>
-	<div class = "contprincipalD"> <p> Descripciones</p></div>
+	<div class = "contprincipalA"> <p> Bebidas</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
     </div>
 
 
