--- a/Manina.html
+++ b/Manina.html
@@ -23,23 +23,23 @@
 
     </div>
 
-    <div class="Entradas">
+    <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Entradas</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
     </div>
 
 
-    <div class="Principales">
+    <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Principales</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
     </div>
 
-    <div class="Postres">
+    <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Postres</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
     </div>
 
-    <div class="Bebidas">
+    <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Bebidas</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
     </div>
