--- a/Manina.html
+++ b/Manina.html
@@ -26,22 +26,26 @@
     <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Entradas</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
 
     <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Principales</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
     <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Postres</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
     <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Bebidas</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
 
