--- a/Manina.html
+++ b/Manina.html
@@ -27,11 +27,15 @@
 	<div class = "contprincipalA"> <p> Entradas</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
 	<div class = "contprincipalC"> <p> Descripciones</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
 
     <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Principales</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
 	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
@@ -40,25 +44,32 @@
 	<div class = "contprincipalA"> <p> Postres</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
 	<div class = "contprincipalC"> <p> Descripciones</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
     <div class="SeccionPrincipal">
 	<div class = "contprincipalA"> <p> Bebidas</p></div>
 	<div class = "contprincipalB"> <p> Descripciones</p></div>
 	<div class = "contprincipalC"> <p> Descripciones</p></div>
+	<div class = "contprincipalB"> <p> Descripciones</p></div>
+	<div class = "contprincipalC"> <p> Descripciones</p></div>
     </div>
 
 
-    <p>And it was enchanting to meet you. All I can say is, I was enchanted to meet you </p>
-    <p>All I can say is, I was enchanted to meet you</p>
-
-
+    <div id= "last">
+         <p>And it was enchanting to meet you. All I can say is, I was enchanted to meet you </p>
+         <p>All I can say is, I was enchanted to meet you</p>
+    </div>
     
 </body>
 
 <footer>
-    <p>Legales | Sobre Nosotros | Contacto </p>
-    <p>Desarrollado by Ibengel </p>
+
+    <div id= "ftr">
+         <p>Legales | Sobre Nosotros | Contacto </p>
+         <p>Desarrollado by Ibengel </p>
+    </div>
 
 
 </footer>
